# RAG_AGENT

./: .gitignore  README.md  main.py  pyproject.toml
Backend/: .env  logger.py  main.py  requirements.txt  test.py
Backend/modules/: llm.py  load_vectorstore.py  query_handlers.py
Backend/routes/: ask_questions.py  upload_pdfs.py
client/: app.py  config.py  requirements.txt
client/components/: chatUI.py  upload.py
client/utils/: api.py
